testdata/baselines/reference/submodule/conformance/conditionalExportsResolutionFallback(moduleresolution=bundler).errors.txt
/index.mts(1,16): error TS2307: Cannot find module 'dep' or its corresponding type declarations.


==== /node_modules/dep/package.json (0 errors) ====
    {
      "name": "dep",
      "version": "1.0.0",
      "exports": {
        ".": {
            "import": "./dist/index.mjs",
            "require": "./dist/index.js",
            "types": "./dist/index.d.ts",
        }
      }
    }
    
==== /node_modules/dep/dist/index.d.ts (0 errors) ====
    export {};
    
==== /node_modules/dep/dist/index.mjs (0 errors) ====
    export {};
    
==== /index.mts (1 errors) ====
    import {} from "dep";
                   ~~~~~
!!! error TS2307: Cannot find module 'dep' or its corresponding type declarations.
    // Should be an untyped resolution to dep/dist/index.mjs,
    // but the first search is only for TS files, and when
    // there's no dist/index.d.mts, it continues looking for
    // matching conditions and resolves via `types`.